# dfhack-remote

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
dfhack-proto/: Cargo.toml  README.md  build.rs
dfhack-proto-srcs/: README.md  build.rs
dfhack-proto-srcs/src/protos/: RemoteFortressReader.proto
dfhack-proto/src/: lib.rs
examples/: hello_world.rs  read_elevation.rs  run.rs
src/: channel.rs  lib.rs  message.rs
