[workspace]
members = [".", "dfhack-proto", "dfhack-proto-srcs"]

[workspace.package]
version = "0.11.0"
authors = ["Pierre Lulé <pierre@lule.fr>"]

[package]
name = "dfhack-remote"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Interacting with the Dwarf Fortress remote API exposed by DFHack "
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "game-development", "games"]
exclude = ["images/"]

[dependencies]
prost = "0.14"
byteorder = "1"
num_enum = "0.7"
log = "0.4"
derive_more = { version = "2", features = ["display"] }
dfhack-proto = { version = "0.11.0", path = "dfhack-proto" }
thiserror = "2"


[dev-dependencies]
bmp = "0.5.0"
ctor = "0.6"
lazy_static = "1.5.0"
rand = "0.10"
env_logger = "0.11"


[features]
test-with-df = []
